--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -3,11 +3,17 @@ spring.application.name=borsibaar
 spring.datasource.url=jdbc:postgresql://localhost:5432/${POSTGRES_DB}
 spring.datasource.username=${POSTGRES_USER}
 spring.datasource.password=${POSTGRES_PASSWORD}
-
 spring.datasource.driver-class-name=org.postgresql.Driver
 
+# JPA
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
 
+# JWT
+security.jwt.secret-key=f34GEan97tmninOvD5SMAwhE3aVZVyKNmGSrbYf33jM=
+security.jwt.expiration-ms=86400000
+
+# Error verbosity (dev only)
 server.error.include-binding-errors=always
 server.error.include-message=always
