--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,11 +11,19 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.8.2",
+    "@types/recharts": "^1.8.29",
     "axios": "^1.11.0",
+    "clsx": "^2.1.1",
+    "framer-motion": "^12.23.12",
+    "highcharts": "^12.3.0",
+    "highcharts-react-official": "^3.2.2",
+    "lucide-react": "^0.536.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.7.1",
+    "react-toastify": "^11.0.5",
+    "recharts": "^3.1.2",
     "redux-thunk": "^3.1.0"
   },
   "devDependencies": {
